<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <ListView
        android:id="@+id/devices_listView"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginBottom="8dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ip_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/ip_edit_text"
        android:digits="0987654321."
        android:hint="@string/ip_address"
        android:inputType="number|text"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"

        app:layout_constraintTop_toBottomOf="@+id/devices_listView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/port_edit_text"
        app:layout_constraintBottom_toTopOf="@id/connect_button"
        app:layout_constraintHorizontal_weight="0.8"/>

    <EditText
        android:id="@+id/port_edit_text"
        android:hint="@string/port"
        android:inputType="number"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"

        app:layout_constraintStart_toEndOf="@id/ip_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/connect_button"
        app:layout_constraintHorizontal_weight="0.2" />

    <Button
        android:id="@+id/connect_button"
        android:text="@string/connect"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/ip_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>